2003-07-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImgPhoto.c (ImgPhotoCmd): Rewrote subcommand processing
	to never jump to the end of the switch.  I find that confusing as
	I can't see whether there's processing still to be done from a
	quick glance at the code, unlike with a direct return. [Bug 771988]

2003-07-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPack.c (ConfigureSlaves): silence compiler warning
	[Bug 771982]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinImage.c (XGetImage): correct init of biSizeImage in
	bitmap header. [Bug 703697] (cap)

2003-07-17  Peter Spjuth  <peter.spjuth@space.se>

	* tests/frame.test:
	* generic/tkFrame.c (CreateFrame): Make sure all options can be set
	to their default value. [Bug #697652]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPanedWindow.c (ArrangePanes): Ensure that the last pane
	* tests/panedwindow.test: shrinks instead of being clipped when
	resized below the reqsize. [Bug 748277] (spjuth)

	* generic/tkWindow.c (Initialize): do not free uninit'ed dstring.
	[Bug 755906] (mistachkin)

2003-07-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/send.test: Strengthened constraints to stop accidental
	smashing of Xserver access; some systems (*ahem* mine *ahem*)
	require xhost-style security for all use...  :^/

2003-07-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTextDisp.c (DisplayText): correct use of textPtr data
	with respect to Tcl_Release time. [Bug #767009]

2003-07-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImage.c (TkDeleteAllImages,etc.): Stopped the deleting
	of hash entries from a table that has just been deleted by this
	function when some images are Tcl_Preserve()d...  [Bug 749353]

2003-07-03  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXColor.c (GetControlPartColor): Use
	the ThemeBrushes to get the control text color for
	buttons.  
	
2003-07-02  Mo DeJong  <mdejong@users.sourceforge.net>
